# mirakl-lib

./: .gitignore  deploy.sh  pyproject.toml
mirakl_lib/: __init__.py  client.py  common.py  offer.py  order.py  public_input.py  shipping.py  test_mirakl_client.py
